syntax = "proto3";

option go_package = "protos/user";

import "google/protobuf/timestamp.proto";

message UserRequest { string id = 1; }

message UserResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp updated_at = 6;
}

message UserListResponse { repeated UserResponse user_list = 1; }